# bevy-jam-3

./: Cargo.toml  README.md
out copy/: bevy-jam-3.d.ts  index.html
src/: constants.rs  cutscene.rs  loading.rs  main.rs  mainmenu.rs  pausemenu.rs  scoreboard.rs  states.rs
src/gameplay/: enemies.rs  interact.rs  mod.rs  physics.rs  player.rs  ui.rs  world.rs
