[package]
name = "bevy-jam-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_turborand = "0.5.0"
bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d" ] }
rand = "0.8.5"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
